--- a/react/react_nomad/react_movie/package.json
+++ b/react/react_nomad/react_movie/package.json
@@ -32,7 +32,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://seulhello.github.io/movie_app",
+  "homepage": "http://sirirang.github.io/movie_app",
   "devDependencies": {
     "gh-pages": "^2.0.1"
   }
