--- a/react/react_nomad/react_member/style_Component/package.json
+++ b/react/react_nomad/react_member/style_Component/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "nomflix",
+  "name": "style_component",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "node-sass": "^4.12.0",
-    "prop-types": "^15.7.2",
+    "components": "^0.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "styled": "^1.0.0",
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
